syntax = "proto3";

package ON.Fragments.Comment;

import "google/api/annotations.proto";
import "Protos/ON/Fragments/Comment/CommentRecord.proto";
import "Protos/ON/Fragments/Comment/SharedTypes.proto";

// Service for Asset fragment interface
service CommentInterface {
  rpc AdminDeleteComment (AdminDeleteCommentRequest) returns (AdminDeleteCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/admin/{ContentID}/{CommentID}/delete"
    };
  }
  rpc AdminEditComment (AdminEditCommentRequest) returns (AdminEditCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/admin/{ContentID}/{CommentID}/edit"
      body: "*"
    };
  }
  rpc AdminPinComment (AdminPinCommentRequest) returns (AdminPinCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/admin/{ContentID}/{CommentID}/pin"
    };
  }
  rpc AdminUnDeleteComment (AdminUnDeleteCommentRequest) returns (AdminUnDeleteCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/admin/{ContentID}/{CommentID}/undelete"
    };
  }
  rpc AdminUnPinComment (AdminUnPinCommentRequest) returns (AdminUnPinCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/admin/{ContentID}/{CommentID}/unpin"
    };
  }
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/create"
      body: "*"
    };
  }
  rpc CreateSubComment (CreateCommentRequest) returns (CreateCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/{CommentID}/create"
      body: "*"
    };
  }
  rpc DeleteOwnComment (DeleteOwnCommentRequest) returns (DeleteOwnCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/{CommentID}/delete"
    };
  }
  rpc EditComment (EditCommentRequest) returns (EditCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/{CommentID}/edit"
      body: "*"
    };
  }
  rpc GetComments (GetCommentsRequest) returns (GetCommentsResponse)
  {
    option (google.api.http) = {
      get: "/api/comment/{ContentID}"
    };
  }
  rpc GetSubComments (GetCommentsRequest) returns (GetCommentsResponse)
  {
    option (google.api.http) = {
      get: "/api/comment/{ContentID}/{CommentID}"
    };
  }
  rpc LikeComment (LikeCommentRequest) returns (LikeCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/{CommentID}/like"
    };
  }
  rpc UnLikeComment (UnLikeCommentRequest) returns (UnLikeCommentResponse)
  {
    option (google.api.http) = {
      post: "/api/comment/{ContentID}/{CommentID}/unlike"
    };
  }
}

message AdminDeleteCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message AdminDeleteCommentResponse {
  CommentPublicRecord Record = 1;
}

message AdminEditCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
  string Text = 3;
}

message AdminEditCommentResponse {
  CommentPublicRecord Record = 1;
}

message AdminPinCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message AdminPinCommentResponse {
  CommentPublicRecord Record = 1;
}

message AdminUnDeleteCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message AdminUnDeleteCommentResponse {
  CommentPublicRecord Record = 1;
}

message AdminUnPinCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message AdminUnPinCommentResponse {
  CommentPublicRecord Record = 1;
}

message CreateCommentRequest {
  string ContentID = 1;
  string ParentID = 2;
  string Text = 3;
}

message CreateCommentResponse {
  CommentPublicRecord Record = 1;
}

message DeleteOwnCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message DeleteOwnCommentResponse {
  CommentPublicRecord Record = 1;
}

message EditCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
  string Text = 3;
}

message EditCommentResponse {
  CommentPublicRecord Record = 1;
}

message GetCommentsRequest {
  string ContentID = 1;
  string ParentCommentID = 2;
  CommentOrder Order = 3;
}
  
message GetCommentsResponse {
  repeated CommentPublicRecord Record = 1;
}

message LikeCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message LikeCommentResponse {
  CommentPublicRecord Record = 1;
}

message UnLikeCommentRequest {
  string ContentID = 1;
  string CommentID = 2;
}

message UnLikeCommentResponse {
  CommentPublicRecord Record = 1;
}

