syntax = "proto3";

package ON.Fragments.Content;

import "google/protobuf/timestamp.proto";

// Content record data
message ContentRecord {
  message PublicData {
    bytes ContentID = 1;                          // Guid for the content record
    google.protobuf.Timestamp CreatedOnUTC = 2;   // UTC timestamp when content was created
    google.protobuf.Timestamp ModifiedOnUTC = 3;  // UTC timestamp when content record was last modified
    google.protobuf.Timestamp PublishedOnUTC = 4; // UTC timestamp when content was published
    string Title = 5;
    string Subtitle = 6;
    string Author = 7;
    string URL = 8;
    string Body = 9;
    repeated bytes AssetIds = 10;
  }
  message PrivateData {
    string CreatedBy = 1;
    string ModifiedBy = 2;
    string PublishedBy = 3;
  }

  PublicData Public = 1;
  PrivateData Private = 2;
}